[package]
name = "compiler_rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
nom-unicode = "0.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
anyhow = "1.0.69"
strum_macros = "0.24.1"
strum = { version = "0.24.1", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.94"
map-macro = "0.2.5"
